examples/test/testpolicy9280.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9280
  namespace: namespace325
spec:
  podSelector:
    matchLabels:
      key27: value4
      key11: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value5
      podSelector:
        matchLabels:
          key49: value3
          key33: value27
